[package]
name = "cqrust_codegen"
version = "0.0.1"
authors = ["Tyler Thrailkill <tylerbthrailkill@gmail.com>"]
description = "Code generation for the cqrust framework"
readme = "../README.md"

[lib]
plugin = true

[dependencies]
rocket = { version = "0.1.2" }
rocket_codegen = { version = "0.1.2" }
cqrust = { version = "0.0.1", path = "../lib/" }
lazy_static = "0.1.*"
log = "^0.3"
