[package]
name = "cqrust_codegen"
version = "0.0.1"
authors = ["Tyler Thrailkill <tylerbthrailkill@gmail.com>"]
description = "Code generation for the cqrust framework"
readme = "../README.md"

[lib]
#plugin = true
proc-macro = true

[dependencies]
#rocket = { version = "0.1.2" }
#rocket_codegen = { version = "0.1.2" }
#cqrust = { version = "0.0.1", path = "../lib/" }
lazy_static = "0.1.*"
log = "^0.3"
syn = { version = "0.12", features = ["full", "derive"] }
quote = "0.4.2"
proc-macro2 = "0.2"
pes-common = { version = "0.1.0", path = "../pes-common"}

