[package]
name = "cqrust"
version = "0.0.1"
authors = ["Tyler Thrailkill <tylerbthrailkill@gmail.com>"]
description = """
CQRS framework written in Rust for Rust.
"""

[dependencies]
lazy_static = "0.1.*"
rocket = { version = "0.1.2" }
rocket_codegen = { version = "0.1.2" }
term-painter = "^0.2"

[dev-dependencies]
lazy_static = "0.2"
cqrust_codegen = { version = "0.0.1", path = "../codegen" }

#[dependencies.hyper]
#version = "^0.9"
#default-features = false

[features]
testing = []

#[lib]
#name = "cqrust"
#plugin = true
