[package]
name = "cqrust"
version = "0.0.1"
authors = ["Tyler Thrailkill <tylerbthrailkill@gmail.com>"]
description = """
CQRS framework written in Rust for Rust.
"""

[dependencies]
lazy_static = "0.1.*"
cqrust_codegen = { version = "0.0.1", path = "../codegen" }

[dev-dependencies]
lazy_static = "0.2"

[features]
testing = []

[lib]
name = "cqrust"
plugin = true
