[package]
name = "pes"
version = "0.0.1"
authors = ["Tyler Thrailkill <tylerbthrailkill@gmail.com>"]
description = """
CQRS framework written in Rust for Rust.
"""

[dependencies]
lazy_static = "0.1.*"
pes-derive = { version = "0.0.1", path = "../pes-derive" }
pes-common = { version = "0.1.0", path = "../pes-common"}
eventbus = "0.1.5"
anymap = "0.12"
maplit = "1.0.1"

[dev-dependencies]
lazy_static = "0.2"

[features]
testing = []

[lib]
name = "pes"
plugin = true
