[package]
name = "hello_world"
version = "0.0.1"
authors = ["Tyler Thrailkill <tyler.b.thrailkill@gmail.com>"]
workspace = "../../"

[dependencies]
cqrust = { path = "../../lib" }
cqrust_codegen = { path = "../../codegen" }
pes-common = { path = "../../pes-common" }
lazy_static = "0.1.*"

#rocket = { version = "0.1.2" }
#rocket_codegen = { version = "0.1.2" }

[dev-dependencies]
cqrust = { path = "../../lib", features = ["testing"] }
