[package]
name = "hello_world"
version = "0.0.1"
authors = ["Tyler Thrailkill <tyler.b.thrailkill@gmail.com>"]
workspace = "../../"

[dependencies]
pes = { path = "../../pes" }
pes-derive = { path = "../../pes-derive" }
pes-common = { path = "../../pes-common" }
lazy_static = "0.1.*"

[dev-dependencies]
pes = { path = "../../pes", features = ["testing"] }

[build-dependencies]
pes-build = { path = "../../pes-build" }
